examples/chapter02/ex1.jsx
// JSX를 포함한 코드를 실행했을 때 발생하는 에러
// SyntaxError: Unexpected token (3:8)
const Component = (
  <div>
    <h1>안녕하세요</h1>
    <p>내용</p>
  </div>
);
